--- a/FightClub/FightClub/Properties/Resources.resx
+++ b/FightClub/FightClub/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="fight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fight.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="records" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\records.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
+  </data>
 </root>
